--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 :root {
-    --background: #dceefd;
+    --background: #fcfcfc;
     --foreground: #171717;
 }
 
@@ -11,3 +11,5 @@ body {
     color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
